# gluemancy

./: .gitignore  Dockerfile  README.md  justfile  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
src/: spark_ingest_demo_glue.py
