[project]
name = "gluemancy"
version = "0.1.0"
description = "ETF momentum intelligence platform"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.38.0",
    "httpx>=0.27.0",
    "pandas>=2.2.0",
    "pandas-ta>=0.3.14b",
    "pyarrow>=16.0.0",
    "pydantic-settings>=2.3.0",
    "pygments>=2.20.0",
    "requests>=2.33.0",
    "rich>=13.7.0",
    "schedule>=1.2.0",
    "streamlit>=1.36.0",
    "yfinance>=0.2.40",
]

[project.scripts]
gluemancy = "gluemancy.pipeline:run_pipeline"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gluemancy"]

[dependency-groups]
dev = [
    "pylint>=3.3.0",
    "pytest>=8.2.0",
    "pytest-vcr>=1.0.2",
    "pyrefly>=0.15.0",
    "ruff>=0.11.0",
]

[tool.uv]
constraint-dependencies = [
    "pillow>=12.2.0",    # CVE-2026-40192: FITS decompression bomb
    "curl-cffi>=0.15.0", # CVE-2026-33752: SSRF via unchecked internal IP redirects
]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["gluemancy"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Pylint
# ---------------------------------------------------------------------------
[tool.pylint.main]
py-version = "3.12"
jobs = 0
ignore-paths = ["tests"]

[tool.pylint.format]
max-line-length = 88

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
]

# ---------------------------------------------------------------------------
# Pyrefly (Meta)
# ---------------------------------------------------------------------------
[tool.pyrefly]
python_version = "3.12"
project_excludes = ["tests"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
